# Finite_Volume_Method_HLLC

./: CMakeLists.txt  README.md  Working_HLLC_(last_time_I_checked),_started_working_on_NACA_profile_-_before_Def_h_changes.patch  main.cpp
exportToHTML/: main.cpp.html
fluid_dynamics/: Bound.cpp  Bound.h  Def.cpp  Def.h  GAMM.cpp  GAMM.h  NACA.cpp  NACA.h  Scheme.cpp  Scheme.h
geometry/: Cell.cpp  Cell.h  Interface.cpp  Interface.h  Mesh.cpp  Mesh.h  MeshParams.cpp  MeshParams.h  Point.cpp  Point.h
output_dir/: only-gamm.csv  only-naca.csv
post_processing_python_scripts/: mach-cp-charts.py  paraView-macro-minimal.py  rezi-chart.py  timer-chart.py
structures/: Conservative.cpp  Conservative.h  Primitive.cpp  Primitive.h  Vector.cpp  Vector.h
test_cases/: Case.cpp  Case.h  GAMM.cpp  GAMM.h
utilities/: DataIO.cpp  DataIO.h  Debug.cpp  Debug.h  Instructions.cpp  Instructions.h  Lines.cpp  Lines.h  Timer.cpp  Timer.h
